# vkllm.c

./: BUILD.bazel  README.md  macro.bzl  shader.bzl
shaders/: attention_forward_qk_shader1.glsl  attention_forward_softmax_shader1.glsl  attention_forward_v_shader1.glsl  crossentropy_forward_shader1.glsl  crossentropy_softmax_backward_shader1.glsl  encoder_forward_shader1.glsl  encoder_forward_shader2.glsl  gelu_forward_shader1.glsl  layernorm_forward_mean_shader2.glsl  layernorm_forward_norm_shader2.glsl  layernorm_forward_rstd_shader2.glsl  layernorm_forward_shader1.glsl  matmul_backward_bias_shader1.glsl  matmul_backward_input_shader1.glsl  matmul_backward_weight_shader1.glsl  matmul_forward_shader1.glsl  residual_backward_shader1.glsl  residual_forward_shader1.glsl  softmax_forward_shader1.glsl  softmax_forward_shader2.glsl
vulkan/: attention_forward.c  common.h  crossentropy_forward.c  crossentropy_softmax_backward.c  encoder_forward.c  gelu_forward.c  layernorm_forward.c  matmul_backward.c  matmul_forward.c  residual_backward.c  residual_forward.c  softmax_forward.c
