load(":macro.bzl", "test_shader")

test_shader(name = "attention_forward")

test_shader(name = "crossentropy_forward")

test_shader(name = "crossentropy_softmax_backward")

test_shader(name = "encoder_forward")

test_shader(name = "gelu_forward")

test_shader(name = "layernorm_forward")

test_shader(name = "matmul_backward")

test_shader(name = "matmul_forward")

test_shader(name = "residual_forward")

test_shader(name = "softmax_forward")
